--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DC London Fitness - Your Journey to a Healthier You">
     <title>DC London Fitness</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+<header>
+    <nav>
+        <ul>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
 <section id="hero">
     <div class="container">
-        <h2>Your Journey to a Healthier You</h2>
-        <p>Customized fitness plans for your goals</p>
         <a href="#contact" class="cta-button">Get Started</a>
     </div>
 </section>
 
 <section id="about">
     <div class="container">
-<body>
-    <h1>About Me</h1>
+        <h2>About Me</h2>
     <p>Hello, I'm Daniel Turbak-Charles, a dedicated personal trainer with 5 years of experience and a lifelong passion for sports and fitness. My training expertise encompasses:</p>
 
     <ul>
@@ -43,7 +53,7 @@
     </ul>
 
     <p>I look forward to embarking on this fitness journey with you and helping you unlock your full potential. Let's work together to attain your health and wellness aspirations.</p>
-    </div>
+   </div>
 </section>
 
 <section id="services">
@@ -81,7 +91,7 @@
 
 <footer>
     <div class="container">
-        <p>&copy; 2023 Personal Trainer. All rights reserved.</p>
+        <p>&copy; 2023 DC London Fitness. All rights reserved.</p>
     </div>
 </footer>
 
